--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -438,8 +438,7 @@ $$
 \CrossEntropy{\pof{Y}}{\E{\pof{x \given Y}}{\frac{\qof{x}}{\pof{x}}}} = \E{\pof{y}}{-\log \E{\pof{x \given y}}{\frac{\qof{x}}{\pof{x}}}}.
 $$
 
-We take an expectation over $$\pof{y}$$, so we need to look at almost all $$\pof{x \given y} \not= 0$$ for different almost all $$\pof{y}$$ separately to consider equality.
-$$-\log x$$ is strictly convex, so we need $$F = \frac{\qof{X}}{\pof{X}}$$ to be constant almost everywhere in the support of $$\pof{x \given y}$$ for any fixed $$y$$. Then we have equality in Jensen's inequality.
+We take an expectation over $$\pof{y}$$, so we need to look at almost all $$\pof{x \given y} \not= 0$$ for different almost all $$\pof{y}$$ separately to consider equality. $$-\log x$$ is strictly convex, so we need $$F = \frac{\qof{X}}{\pof{X}}$$ to be constant almost everywhere in the support of $$\pof{x \given y}$$ for any fixed $$y$$. Then we have equality in Jensen's inequality.
 
 In the following, I will limit myself to the discrete case to avoid having to deal with measure theory[^measuretheory].
 To obtain equality, for all $$y$$ with $$\pof{y} \not= 0$$ (i.e. we have support) and for all $$x_1, x_2$$ with $$\pof{x_1 \given y}, \pof{x_2 \given y} \not= 0$$, we need $$\frac{\qof{x_1}}{\pof{x_1}} = \frac{\qof{x_2}}{\pof{x_2}}$$. 
@@ -670,6 +669,7 @@ While the data processing inequality provides valuable insights into information
 
 By understanding the foundations and limitations of the data processing inequality, we can leverage its insights effectively in information theory and related fields.
 
+---
 
 In the [first part](/2023/08/sdpi_fsvi/) of this two-part series on *Function-Space Variational Inference (**FSVI**)*, we looked at the *Data Processing Inequality (**DPI**)*. 
 In this second part, we finally look at the relationship between FSVI, a method focusing on the Bayesian predictive posterior rather than the parameter space, and the DPI.c
@@ -693,7 +693,9 @@ The DPI states that processing data stochastically can only reduce information. 
 
 <aside class="box-note" markdown="1">
 Consider two distributions $\qof{\W}$ and $\pof{\W}$ over a random variable $\W$. Let $Y = \fof{\W}$ be a stochastic mapping from $\W$ to $Y$. Then the DPI states:
+
 $$\Kale{\qof{\W}}{\pof{\W}} \ge \Kale{\qof{Y}}{\pof{Y}}.$$
+
 </aside>
 
 That is, the KL divergence (*🥬 divergence*) between $\qof{Y}$ and $\pof{Y}$ cannot be larger than between the original $\qof{\W}$ and $\pof{\W}$. Intuitively, the stochastic mapping $\opf$ induces a bottleneck that reduces how well we can distinguish between $\opp$ and $\opq$. Finally we have equality when $\Kale{\qof{\W \given Y}}{\pof{\W \given Y}} = 0$. See the [first part of this two-part series](https://blog.blackhc.net/2023/08/sdpi_fsvi/) for more details.
@@ -717,6 +719,7 @@ In the following, I assume a classification task with cross-entropy loss. This p
 - $C$ is the number of classes.
 
 The probabilistic model is as usual:
+
 $$\pof{\y, \w \given \x} = \pof{\y \given \x, \w} \, \pof{\w}.$$
 
 Note that I drop conditioning on $\x$ for simplicity, and also note, that I use upper-case letters for random variables, I'm taking an expectation over in some form, e.g.\ the 🥬 divergence, and lower-case letters when I'm referring to specific observations or values that could be substituted (with the exception of $\Dany$).
@@ -732,6 +735,7 @@ $$
 $$
 
 Above application of the chain rule yields a *chain inequality* for the DPI as well:
+
 $$
 \begin{align}
 \Kale{\qof{\W}}{\pof{\W}} &\ge \Kale{\qof{\Y_n,...,\Y_1}}{\pof{\Y_n,...,\Y_1}}\\
@@ -832,27 +836,37 @@ $$
 &\ge \Kale{\qof{\Y...\given \x...}}{\pof{\Y...\given \x...}}.
 \end{align}
 $$
+
 </aside>
 
 
 In practice, both works by Rudner et al.\ (2022), for example, linearize the logits^[The final activations of the neural network before applying the softmax function (in multi-class classification), for example. Not to be confused with the pre-logits (e.g. embeddings).] (similar to a Laplace approximation) and use the DPI to shown (in their notation):
+
 $$
 \mathbb{D}_{\mathrm{KL}}\left(q_{f(\cdot ; \boldsymbol{\Theta})} \| p_{f(\cdot ; \boldsymbol{\Theta})}\right) \leq \mathbb{D}_{\mathrm{KL}}\left(q_{\Theta} \| p_{\Theta}\right)
 $$
+
 which in my notation is equivalent to the above:
+
 $$
 \Kale{\qof{\L...\given \x...}}{\pof{\L...\given \x...}} \le \Kale{\qof{\W}}{\pof{\W}}.
 $$
+
 They maximize the fELBO objective:
+
 $$
-\mathcal{F}\left(q_{\boldsymbol{\Theta}}\right)=\mathbb{E}_{q_{f\left(\mathbf{x}_{\mathcal{D}} ; \boldsymbol{\Theta}\right)}}\left[\log p_{\mathbf{y} \mid f(\mathbf{X} ; \boldsymbol{\Theta})}\left(\mathbf{y}_{\mathcal{D}} \mid f\left(\mathbf{X}_{\mathcal{D}} ; \boldsymbol{\theta}\right)\right)\right]-\sup _{\mathbf{X} \in \mathcal{X}_{\mathbb{N}}} \mathbb{D}_{\mathrm{KL}}\left(q_{f(\mathbf{X} ; \boldsymbol{\Theta})} \| p_{f(\mathbf{X} ; \boldsymbol{\Theta})}\right),$$
+\mathcal{F}\left(q_{\boldsymbol{\Theta}}\right)=\mathbb{E}_{q_{f\left(\mathbf{x}_{\mathcal{D}} ; \boldsymbol{\Theta}\right)}}\left[\log p_{\mathbf{y} \mid f(\mathbf{X} ; \boldsymbol{\Theta})}\left(\mathbf{y}_{\mathcal{D}} \mid f\left(\mathbf{X}_{\mathcal{D}} ; \boldsymbol{\theta}\right)\right)\right]-\sup _{\mathbf{X} \in \mathcal{X}_{\mathbb{N}}} \mathbb{D}_{\mathrm{KL}}\left(q_{f(\mathbf{X} ; \boldsymbol{\Theta})} \| p_{f(\mathbf{X} ; \boldsymbol{\Theta})}\right),
+$$
+
 which is equivalent to minimizing the information-theoretic objective:
+
 $$
 \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\L... \given \x...}}{\pof{\L... \given \x...}},
 $$
 if we choose the $\x...$ to tighten the DPI inequality as much as possible (i.e.\ choosing the supremum).
 
 Using the inequality chain from above, we can sandwich their objective between a regular (negative) ELBO and the (negative) functional ELBO, we have derived above:
+
 $$
 \begin{aligned}
 &\E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\W}}{\pof{\W}} \\
@@ -892,11 +906,15 @@ To me, functions are an abstract thing, and determining how to assign a prior or
 Unless there are other considerations, it makes sense to use priors that assign the same density to parameters that are equivalent. 
 Hence, for a given function $\fof{\x ; \w}$, which determines the likelihood $\pof{\y \given \x, \w} \triangleq \pof{y \given \fof{\x ; \w}}$, we can define an equivalence relation such that $\w \sim \w'$ if and only if $\fof{\x; \w} = \fof{\x; \w'}$ *for all* $\x$. 
 This equivalence relation partitions the parameter space into equivalence classes:
+
 $$[\w] \triangleq \{\w' : \fof{x ; \w} = \fof{x ; \w} \quad \forall x \}.$$
 
 Any prior $\pof{\w}$ induces a prior $\hpof{[\w]}$ over the equivalence classes:
+
 $$\hpof{[\w]} \triangleq \sum_{\w' \in [\w]} \pof{\w'}.$$
+
 ---or $\int_{[\w]} \pof{\w'} \, d \w'$ for continuous $\w$---with the corresponding model:
+
 $$
 \begin{aligned}
 \hpof{\y, [\w] \given \x} &\triangleq \hpof{\y \given [\w], \x} \, \hpof{[\w]} \\
@@ -908,10 +926,14 @@ $$
 Crucially, all of this depends on which $\x$ we consider as input domain. Different domains for $\x$ will induce different equivalence classes. 
 
 For example, for function families on $\mathbb{R} \to \mathbb{R}$, if we restrict the domain to $\x \in (0, 1)$, the equivalence classes will be different from the domain $\x \in \mathbb{R}$. For $\x \in (0, 1)$, we do not differentiate between functions that behave differently outside this domain. For any $k \ge 1$,
-$$\fof{x} = \begin{cases} 
+
+$$
+\fof{x} = \begin{cases} 
 x^2 & \text{if } |x| \leq k \\
 2|x| - 2k + k^2  & \text{otherwise}
-\end{cases}$$
+\end{cases}
+$$
+
 has the same predictions within the domain $\x \in (0, 1)$ while being different outside of it for different $k$.
 </aside>
 
@@ -922,12 +944,15 @@ Importantly, this definition is consistent with Bayesian inference:
 
 <aside class="box-note" markdown="1">
 $[\w]$ commutes with Bayesian inference:
+
 $$
 \hpof{[\w] \given \Dany} = \sum_{\w' \in [\w]} \pof{\w' \given \Dany}.
 $$
+
 </aside>
 
 This is easy to show with the definition and application of Bayes' rule:
+
 $$
 \begin{aligned}
 \hpof{[\w] \given \Dany} &= \hpof{\Dany \given [\w]} \, \hpof{[\w]} / \hpof{\Dany} \\
@@ -937,7 +962,9 @@ $$
 &= \sum_{\w' \in [\w]} \pof{\w' \given \Dany}.
 \end{aligned}
 $$
+
 The last step follows from $\hpof{\Dany}=\pof{\Dany}$:
+
 $$
 \begin{aligned}
 \hpof{\Dany} &= \sum_{[\w]} \hpof{\Dany, [\w]} \\
@@ -946,6 +973,7 @@ $$
 &= \pof{\Dany}. 
 \end{aligned}
 $$
+
 This also tells us that, for any $\x$ and $\y$, $\pof{\y... \given \x...} = \hpof{\y... \given \x...}$.
 
 Given this consistency, we don't have to differentiate between $\hat\opp$ and $\opp$ and can use $\opp$ interchangeably.
@@ -960,6 +988,7 @@ Above proof is valid for any function $\fof{\cdot}$ applied to a random variable
 ## Equality & Symmetries
 
 We can view $[\w]$ as a projection from $\w$ to its equivalence class $[\w]$. The DPI then gives us:
+
 $$
 \Kale{\qof{\W}}{\pof{\W}} \ge \Kale{\qof{[\W]}}{\pof{[\W]}}.
 $$
@@ -989,6 +1018,7 @@ Then $\Kale{\qof{[\W]}}{\pof{[\W]}}=\Kale{\qof{\W_1}}{\pof{\W_1}}$ and captures 
 Finally, let's assume that the predictions are periodic in some way. That is, e.g.\ $\y = \sin \w$. Obviously, $[\w] = [\w + 2\pi]$ then. 
 
 Further, let $\pof{\w} = \operatorname{U}(\w; [0,2\pi \, N))$ for some $N$ that determines the number of periods. Then, if we introduce another random variable $K$, that captures which period we are in, we can (again) use the chain rule to write:
+
 $$
 \begin{aligned}
 \Kale{\qof{\W}}{\pof{\W}} &= \Kale{\qof{\W \given \W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \given \W \in [K\,2\pi, (K+1)\,2\pi]}} \\
@@ -997,6 +1027,7 @@ $$
 &\quad + \Kale{\qof{\W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \in [K\,2\pi, (K+1)\,2\pi]}}. 
 \end{aligned}
 $$
+
 This follows from the setup of this specific example.
 
 Finally, $\Kale{\qof{\W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \in [K\,2\pi, (K+1)\,2\pi]}} \le \log N$.
@@ -1009,12 +1040,14 @@ How does the predictive prior term fit into this? The DPI again yields the answe
 
 <aside class="box-important" markdown="1">
 As the predictions are independent of the parameters, we can map from equivalence classes $[\w]$ to predictions, and the DPI yields:
+
 $$
 \begin{align}
 \Kale{\qof{\W}}{\pof{\W}} &\ge \Kale{\qof{[\W]}}{\pof{[\W]}} \\
 &\ge \Kale{\qof{\Y...\given\x...}}{\pof{\Y...\given\x...}}.
 \end{align}
 $$
+
 </aside>
 
 This tells us that the predictive prior term can at best measure the 🥬 divergence between the equivalence classes of the parameters---and not between the parameters itself. Luckily, this is the more meaningful divergence anyway.
@@ -1030,6 +1063,7 @@ To give intuition and without attempting to prove this formally, we can appeal t
 
 In the space of equivalence classes given our definitions, the \[MLE\] will be unique by definition and thus the model identifiable, and as the MLE is prior-independent, both $\opq$ and $\opp$ will converge to the MLE. In other words, both $\opq$ and $\opp$ will converge to the same equivalence class, and $\Kale{\qof{[\W]\given \Y..., \x...}}{\pof{[\W] \given \Y..., \x...}} \to 0$ for $n \to \infty$.
 Thus, we have:
+
 $$
 \begin{align}
 \Kale{\qof{[\W]}}{\pof{[\W]}} = \sup_{n\in \mathbb{N}} \Kale{\qof{\Y_n,...,\Y_1\given\x_n,...,\x_1}}{\pof{\Y_n,...,\Y_1\given\x_n,...,\x_1}}.
@@ -1053,20 +1087,26 @@ Given that these priors are difficult to express explicitly though, using the DP
 Applied to the functional ELBO, we can gain a new perspective on label entropy regularization.
 
 The functional evidence bound can be lower-bounded using the chain rule by:
+
 $$
 \begin{align}
 \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}} \\
 \ge \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \E{\pdata{\x}}{\Kale{\qof{\Y \given \x}}{\pof{\Y \given \x}}},
 \end{align}
 $$
+
 where we can expand the term under the second expectation to:
+
 $$
 \Kale{\qof{\Y \given \x}}{\pof{\Y \given \x}}=\CrossEntropy{\qof{\Y \given \x}}{\pof{\Y \given \x}} - \xHof{\qof{\Y \given \x}}.
 $$
+
 *Assuming that our prior yields a uniform distribution over the labels*, we can drop the cross entropy term because it is constant and obtain:
+
 $$
 \E{\qof{\w}}{-\log \pof{\Dany \given \w}} - \E{\pdata{\x}}{\xHof{\qof{\Y \given \x}}}.
 $$
+
 This is the same as an MLE minimization objective with an additional entropy regularization term $-\xHof{\qof{\Y \given \x}}$ for different $\x$ that prevents the model from overfitting to the labels and collapsing to the one-hot encoding of the labels.
 
 Thus, in the simplest approximation, the DPI and functional variational inference give us a new perspective on label entropy regularization (and also label noise as I will *shortly* discuss in the next post 🤞).
